# SPDX-FileCopyrightText: 2023 perillamint
#
# SPDX-License-Identifier: CC0-1.0

[package]
name = "memdump"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "Handy unsafe no_std memory dumper utility library written in Rust."
repository = "https://github.com/perillamint/memdump-rs"
keywords = ["hexdump", "memdump", "unsafe", "no_std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
